@@ -1,3 +1,9 @@
+2007-10-12  Albert Chu  <chu11@llnl.gov>
+
+	* man/cerebro.conf.5.in, src/cerebrod/cerebrod_config.c: Support
+	ability for user to input hostnames for speaker and listen message
+	config instead of just ip addresses.
+	
 2007-10-11  Albert Chu  <chu11@llnl.gov>
 
 	* src/libs/include/cerebro/cerebro_config.h,
